<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_marginTop="5dp" >

          <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/NN_Titulo"
            android:background="#FBFBEF" >
            <requestFocus />
        </EditText>
         
         
       <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="50dp"
            android:layout_height="40dp"
          	android:background="#000000"  
       		android:layout_marginLeft="5dp"
            android:src="@drawable/ic_action_content_save" />

        <ImageButton 
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="40dp"
         	android:background="#000000"  
        	android:layout_marginLeft="3dp"
            android:src="@drawable/ic_action_collections_new_label" />
        
    </LinearLayout>
        <TextView 
        android:background="#000000"
 		android:id="@+id/lineaHorizontal2"
 		android:layout_height="3dp"
  		android:layout_width="fill_parent"/>
    
     <TextView
         android:id="@+id/textViewClases"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#cda56d"
         android:paddingTop="5dp"
         android:text="@string/NN_text_viewclass"
         android:textStyle="bold" />
   
    <TextView 
        android:background="#000000"
 		android:id="@+id/lineaHorizontal"
  		android:layout_height="2dp"
  		android:layout_width="fill_parent"/>
    

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#CCCCFF">

        
    </LinearLayout>
    

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_weight="0.65"
        android:background="#F3F781"
        android:ems="20"
        android:gravity="top"
        android:hint="@string/NN_Texto"
        android:inputType="textMultiLine"
        android:lines="10"
        android:textStyle="italic" />

   

</LinearLayout>